--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,11 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Temp
+/Library
+/UserSettings
+/.vsconfig
+/Assembly-CSharp.csproj
+/Gallery.sln
+/Gallery.apk
+/Gallery_BurstDebugInformation_DoNotShip/tempburstlibs/armeabi-v7a
